Infra.Data and Api completion

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,9 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infra.CData\Infra.CData.csproj" />
-    <ProjectReference Include="..\Infra.EntityFramework\Infra.EntityFramework.csproj" />
-    <ProjectReference Include="..\Infra.MongoDbDriver\Infra.MongoDbDriver.csproj" />
+    <ProjectReference Include="..\Infra.Data\Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
